feat(logs): friendly traffic log view with plugin pipeline
- Capture per-plugin input/output snapshots during request/response phases
- Add /api/logs/{id}/friendly endpoint extracting user prompt, model output, model name
- Redesign Logs.vue as card list showing prompt/output/plugin pipeline at a glance
- Keep raw request/response headers/body and plugin logs in detail drawer tabs